--- a/photography.html
+++ b/photography.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <style>
+        @media (min-width: 0px) {
+            .card-columns {
+                column-count: 2;
+            }
+        }
+
+        @media (min-width: 768px) {
+            .card-columns {
+                column-count: 3;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .card-columns {
+                column-count: 4;
+            }
+        }
+    </style>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -46,26 +65,15 @@
         <div class="container">
             <div class="card-columns">
                 <div class="card">
-                    <img src="images/photography/可乐配雪糕.jpg" class="card-img-top" alt="可乐配雪糕">
+                    <img src="images/photography/格局.jpg" class="card-img-top" alt="格局">
                     <div class="card-body">
-                        <p class="card-text">可乐配雪糕是我今天碰上的最美好的事情</p>
+                        <p class="card-text">格局</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <a href="images/photography/high_resolution/可乐配雪糕.jpg" target="_blank" rel="noopener noreferrer">
+                            <a href="images/photography/high_resolution/格局.jpg" target="_blank"
+                                rel="noopener noreferrer">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
                             </a>
-                            <small class="text-muted">2019.9.21</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="images/photography/煎蛋.jpg" class="card-img-top" alt="煎蛋">
-                    <div class="card-body">
-                        <p class="card-text">煎蛋</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <a href="images/photography/high_resolution/煎蛋.jpg" target="_blank" rel="noopener noreferrer">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
-                            </a>
-                            <small class="text-muted">2019.8.7</small>
+                            <small class="text-muted">2019.5.20</small>
                         </div>
                     </div>
                 </div>
@@ -74,10 +82,89 @@
                     <div class="card-body">
                         <p class="card-text">涧</p>
                         <div class="d-flex justify-content-between align-items-center">
-                            <a href="images/photography/high_resolution/涧.jpg" target="_blank" rel="noopener noreferrer">
+                            <a href="images/photography/high_resolution/涧.jpg" target="_blank"
+                                rel="noopener noreferrer">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
                             </a>
                             <small class="text-muted">2019.4.4</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/photography/Love_Yn.jpg" class="card-img-top" alt="Love_Yn">
+                    <div class="card-body">
+                        <p class="card-text">Love_Yn</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="images/photography/high_resolution/Love_Yn.jpg" target="_blank"
+                                rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2019.3.13</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/photography/环球金融中心.jpg" class="card-img-top" alt="环球金融中心">
+                    <div class="card-body">
+                        <p class="card-text">环球金融中心</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="images/photography/high_resolution/环球金融中心.jpg" target="_blank"
+                                rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2019.1.16</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/photography/解忧杂货铺.jpg" class="card-img-top" alt="解忧杂货铺">
+                    <div class="card-body">
+                        <p class="card-text">解忧杂货铺</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="images/photography/high_resolution/解忧杂货铺.jpg" target="_blank"
+                                rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2018.12.24</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/photography/老婆饼.jpg" class="card-img-top" alt="老婆饼">
+                    <div class="card-body">
+                        <p class="card-text">老婆饼</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="images/photography/high_resolution/老婆饼.jpg" target="_blank"
+                                rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2018.12.17</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/photography/Yuxin_H.jpg" class="card-img-top" alt="Yuxin_H">
+                    <div class="card-body">
+                        <p class="card-text">Yuxin_H</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="images/photography/high_resolution/Yuxin_H.jpg" target="_blank"
+                                rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2018.12.03</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="images/photography/Love_Yx.jpg" class="card-img-top" alt="Love_Yx">
+                    <div class="card-body">
+                        <p class="card-text">Love_Yx</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <a href="images/photography/high_resolution/Love_Yx.jpg" target="_blank"
+                                rel="noopener noreferrer">
+                                <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                            </a>
+                            <small class="text-muted">2018.11.21</small>
                         </div>
                     </div>
                 </div>
