--- a/photography.html
+++ b/photography.html
@@ -64,7 +64,7 @@
         </section>
         <div class="container">
             <div class="card-columns">
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/格局.jpg" class="card-img-top" alt="格局">
                     <div class="card-body">
                         <p class="card-text">格局</p>
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/涧.jpg" class="card-img-top" alt="涧">
                     <div class="card-body">
                         <p class="card-text">涧</p>
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/Love_Yn.jpg" class="card-img-top" alt="Love_Yn">
                     <div class="card-body">
                         <p class="card-text">Love_Yn</p>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/环球金融中心.jpg" class="card-img-top" alt="环球金融中心">
                     <div class="card-body">
                         <p class="card-text">环球金融中心</p>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/解忧杂货铺.jpg" class="card-img-top" alt="解忧杂货铺">
                     <div class="card-body">
                         <p class="card-text">解忧杂货铺</p>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/老婆饼.jpg" class="card-img-top" alt="老婆饼">
                     <div class="card-body">
                         <p class="card-text">老婆饼</p>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/Yuxin_H.jpg" class="card-img-top" alt="Yuxin_H">
                     <div class="card-body">
                         <p class="card-text">Yuxin_H</p>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card shadow-sm">
                     <img src="images/photography/Love_Yx.jpg" class="card-img-top" alt="Love_Yx">
                     <div class="card-body">
                         <p class="card-text">Love_Yx</p>
