--- a/index.html
+++ b/index.html
@@ -75,21 +75,29 @@
                     class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 mt-4 blog-main">
-                    <hr>
-                    <div class="blog-post">
-                        <p>时常在想，生活中会有哪些不期而遇的事情。</p>
-                        <small class="text-muted">2019年9月25日</small>
-                        <hr>
-                    </div>
-                    <hr>
-                    <div class="blog-post">
-                        <p>一念之间的东西好微妙啊</p>
-                        <small class="text-muted">2019年9月22日</small>
-                        <hr>
+            <hr>
+            <div class="card-columns">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">时常在想，生活中会有哪些不期而遇的事情。</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.9.25</small></p>
                     </div>
                 </div>
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">一念之间的东西好微妙啊</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.9.22</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <img src="images/lightning/可乐配雪糕.jpg" class="card-img-top" alt="可乐配雪糕">
+                    <div class="card-body">
+                        <p class="card-text">可乐配雪糕是我今天碰上的最美好的事情</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.9.21</small></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="mt-auto">
         <hr>
