--- a/Real me.html
+++ b/Real me.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Xin-Scarecrow | Real me</title>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/resume.min.css">
 </head>
 
 <body class="d-flex flex-column h-100">
-    <header style="padding-top: 56px">
+    <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
             <a class="navbar-brand" href="index.html"> <img src="images/icon-light.png" width="30" height="30"
                     class="d-inline-block align-top" alt=""> Xin-Scarecrow </a>
@@ -25,7 +26,7 @@
                     <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#"
                             id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">作品</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown"> <a class="dropdown-item"
                                 href="photography.html">光影</a><a class="dropdown-item" href="animation.html">动画</a><a
                                 class="dropdown-item" href="film.html">短片</a> </div>
                     </li>
@@ -35,14 +36,65 @@
             </div>
         </nav>
     </header>
-    <main role="main"></main>
+    <main role="main">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="sideNav">
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <img class="img-fluid rounded-circle" src="images/Yuxin_H.jpg">
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">我</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#interests">业余生活</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="container-fluid p-0">
+
+            <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+                <div class="w-100">
+                    <h1 class="mb-0">Yuxin Hou</h1>
+                    <div class="mb-5">
+
+                        <a href="mailto:houyx@shanghaitech.edu.cn">Email: houyx@shanghaitech.edu.cn</a><br>
+                    </div>
+                    <p class="lead mb-5"></p>
+                    <div class="social-icons">
+                        <a href="https://space.bilibili.com/6454144">
+                            <svg class="icon">
+                                <use xlink:href="#iconbilibili"></use>
+                            </svg></a>
+                        <a href="https://weibo.com/yuxin2016">
+                            <svg class="icon">
+                                <use xlink:href="#iconsina"></use>
+                            </svg></a>
+                    </div>
+                </div>
+            </section>
+
+            <hr class="m-0">
+
+            <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+                <div class="w-100">
+                    <h2 class="mb-5">业余生活</h2>
+                    <p>懒散，好玩。</p>
+                </div>
+            </section>
+
+        </div>
+
+    </main>
     <footer class="mt-auto">
         <hr>
         <div class="container">
-                <img src="images/icon-dark.png" alt="icon" width="10%">
-                <p><small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small></p>
-                <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
-                <p class="text-right"><a href="#">Back to top</a></p>
+            <img src="images/icon-dark.png" alt="icon" width="30px">
+            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+            <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
+            <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -54,6 +106,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="js/resume.min.js"></script>
+    <script src="https://at.alicdn.com/t/font_1450224_cm52opxn0on.js"></script>
 </body>
 
 </html>
