--- a/travel.html
+++ b/travel.html
@@ -64,11 +64,11 @@
     <footer class="mt-auto">
         <hr>
         <div class="container">
-                <img src="images/icon-dark.png" alt="icon" width="10%">
-                <p><small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small></p>
+                <img src="images/icon-dark.png" alt="icon" width="30px">
+                <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
                 <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
                 <p class="text-right"><a href="#">Back to top</a></p>
-        </div>
+            </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
