--- a/film.html
+++ b/film.html
@@ -79,8 +79,8 @@
                 <div class="col-md-5">
                     <div class="embed-responsive embed-responsive-16by9">
                         <video
-                            src='videos/film/Johan "N0tail" Sundstein X OG@TI8.mp4'
-                            controls poster='images/poster/Johan "N0tail" Sundstein X OG@TI8.jpg' preload="metadata"></video>
+                            src='videos/film/Johan N0tail Sundstein X OG@TI8.mp4'
+                            controls poster='images/poster/Johan N0tail Sundstein X OG@TI8.jpg' preload="metadata"></video>
                     </div>
                 </div>
             </div>
