--- a/Real me.html
+++ b/Real me.html
@@ -59,19 +59,16 @@
                 <div class="w-100">
                     <h1 class="mb-0">Yuxin Hou</h1>
                     <div class="mb-5">
-
                         <a href="mailto:houyx@shanghaitech.edu.cn">Email: houyx@shanghaitech.edu.cn</a><br>
                     </div>
                     <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a href="https://space.bilibili.com/6454144">
-                            <svg class="icon">
-                                <use xlink:href="#iconbilibili"></use>
-                            </svg></a>
+                            <img src="images/icons/bilibili.png" alt="bilibili" class="icon" style="height: 1.11rem;"></a>
                         <a href="https://weibo.com/yuxin2016">
-                            <svg class="icon">
-                                <use xlink:href="#iconsina"></use>
-                            </svg></a>
+                            <img src="images/icons/weibo.png" alt="weibo" class="icon"></a>
+                        <a href="">
+                            <img src="images/icons/wechat.png" alt="wechat" class="icon"></a>
                     </div>
                 </div>
             </section>
@@ -107,7 +104,6 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
     <script src="js/resume.min.js"></script>
-    <script src="https://at.alicdn.com/t/font_1450224_cm52opxn0on.js"></script>
 </body>
 
 </html>
