--- a/Real me.html
+++ b/Real me.html
@@ -86,7 +86,7 @@
         </div>
 
     </main>
-    <!-- <footer class="mt-auto">
+    <footer class="mt-auto">
         <hr>
         <div class="container">
             <img src="images/icon-dark.png" alt="icon" width="30px">
@@ -94,9 +94,7 @@
             <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
-    </footer> -->
-    <div id="footer"></div>
-    <div id="page2"></div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -112,10 +110,6 @@
             $('[data-toggle="tooltip"]').tooltip()
         })
     </script>
-    <script>
-        $("#footer").load("footer.html");
-        $("#page2").load("page/Page_2.html");
-  </script>
 </body>
 
 </html>
