--- a/animation.html
+++ b/animation.html
@@ -46,6 +46,37 @@
             <hr class="featurette-divider">
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
+                    <h3 class="featurette-heading">一切都将沦为调色 X disguise</h3>
+                    <p>
+                        在外学习disguise，本是舞台设计，但最后都沉迷于调色。<br>
+                        调色是病，病名为爱。<br>
+                    </p>
+                </div>
+                <div class="col-md-5 order-md-1">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe src="https://player.bilibili.com/player.html?aid=75383043&cid=128942696&page=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7">
+                    <h3 class="featurette-heading">蛋炒饭 X Cinema 4D</h3>
+                    <p>
+                        这是我最近接触C4D软件以来，做的最复杂的一个场景了。<br>
+                        几乎每一处的设计，都要去翻看很多教程，勉勉强强地完成到 了现在这个样子。<br>
+                        其实我的雄心是勃勃的，立Flag，我要搞美⻝大制作。<br>
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <div class="embed-responsive embed-responsive-16by9">
+                            <iframe src="https://player.bilibili.com/player.html?aid=74924256&cid=128173964&page=1" scrolling="no" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+                    </div>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+            <div class="row featurette">
+                <div class="col-md-7 order-md-2">
                     <h3 class="featurette-heading">作业</h3>
                     <p>
                         微博流行的一张右下角独坐一人的大面积留白图。<br>
