--- a/index.html
+++ b/index.html
@@ -78,6 +78,20 @@
             <hr>
             <div class="card-columns">
                 <div class="card shadow-sm">
+                    <img src="images/lightning/剪影.jpg" class="card-img-top" alt="剪影">
+                    <div class="card-body">
+                        <p class="card-text">误入创艺一楼的小黑屋。——「风吹草动」</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.11.8</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
+                    <img src="images/lightning/天气之子.jpg" class="card-img-top" alt="天气之子">
+                    <div class="card-body">
+                        <p class="card-text">看过「天气之子」之后，就喜欢上了这个场景。</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.11.8</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <p class="card-text">时常在想，生活中会有哪些不期而遇的事情。</p>
                         <p class="card-text text-right"><small class="text-muted">2019.9.25</small></p>
