--- a/photography.html
+++ b/photography.html
@@ -64,6 +64,19 @@
         </section>
         <div class="container">
             <div class="card-columns">
+                    <div class="card shadow-sm">
+                            <img src="images/photography/秋色.jpg" class="card-img-top" alt="秋色">
+                            <div class="card-body">
+                                <p class="card-text">秋色</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <a href="images/photography/high_resolution/秋色.jpg" target="_blank"
+                                        rel="noopener noreferrer">
+                                        <button type="button" class="btn btn-sm btn-outline-secondary">High Resolution</button>
+                                    </a>
+                                    <small class="text-muted">2019.10.4</small>
+                                </div>
+                            </div>
+                        </div>
                 <div class="card shadow-sm">
                     <img src="images/photography/格局.jpg" class="card-img-top" alt="格局">
                     <div class="card-body">
