--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
                 </div>
                 <div class="card shadow-sm">
                     <div class="card-body">
-                        <p class="card-text">一念之间的东西好微妙啊</p>
+                        <p class="card-text">一念之间的东西好微妙啊。</p>
                         <p class="card-text text-right"><small class="text-muted">2019.9.22</small></p>
                     </div>
                 </div>
                 <div class="card shadow-sm">
                     <img src="images/lightning/可乐配雪糕.jpg" class="card-img-top" alt="可乐配雪糕">
                     <div class="card-body">
-                        <p class="card-text">可乐配雪糕是我今天碰上的最美好的事情</p>
+                        <p class="card-text">可乐配雪糕是我今天碰上的最美好的事情。——ZN</p>
                         <p class="card-text text-right"><small class="text-muted">2019.9.21</small></p>
                     </div>
                 </div>
