--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="zh" class="h-100">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YZNQRQW53"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-9YZNQRQW53');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Xin-Scarecrow | 一念之间</title>
@@ -116,11 +125,11 @@
     <footer class="mt-auto">
         <hr>
         <div class="container">
-                <img src="images/icon-dark.png" alt="icon" width="30px">
-                <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
-                <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
-                <p class="text-right"><a href="#">Back to top</a></p>
-            </div>
+            <img src="images/icon-dark.png" alt="icon" width="30px">
+            <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
+            <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
+            <p class="text-right"><a href="#">Back to top</a></p>
+        </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
