--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="container">
             <img src="images/icon-dark.png" alt="icon" width="30px">
             <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
-            <p class="text-center text-white"><small>Designed by Yuxin_H.</small></p>
+            <p class="text-center text-white"><small>Designed by Yuxin_H. <span id="busuanzi_container_site_pv">哇！<span id="busuanzi_value_site_pv"></span>人找到我了。</span></small></p>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
@@ -140,6 +140,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 </body>
 
 </html>
