--- a/blogs/20191201.html
+++ b/blogs/20191201.html
@@ -47,10 +47,11 @@
                         <hr>
                         <p>又是一个周末，期待许久。</p>
                         <p>不同知识背景下的小伙伴，通力协作，创造了充实又非凡的周末生活。过程中，让我印象深刻的一个片段，是在构建的部分。当时我们拿着设计好的几何结构，准备组装。那么，在我们面前有两个选择：一是利用脑海中生成的映象；二是利用HoloLens投射的映像。一开始，我们觉得可以双管齐下，但当每个人体验了用HoloLens去组装之后，惊呼 Amazing！技术带来的精确生产，让整个组装效率获得了极大的提高。然而双刃剑下，我们也可能错失了与之伴随的或被称为创造力的「错误组装」。若是利用一种能够实时的捕获，计算，预测的技术，当我们主动地改变走向的时候，它能重新生成结构，甚至给出接下来的走向建议，这类带有交互式的体验，会更让我有身处未来的感觉，我对这样的未来充满了期待。</p>
-                        <img src="blog_images/Data Reef.jpg" class="col-6 offset-3" alt="Data Reef">
+                        <video src=""></video>
 
                         <p>相关内容：</p>
                         <a href="https://mp.weixin.qq.com/s/ZWg_hI2CePdgKLXNnc-5UA">触感数字工作坊 | Data Reef 数据礁 : 空间建构与数码群落</a>
+                        <img src="blog_images/Data Reef.jpg" class="col-6 offset-3 my-3" alt="Data Reef">
                         <hr>
                     </div>
                 </div>
