--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             <hr>
             <div class="card-columns">
                 <div class="card shadow-sm">
+                    <div class="card-body">
+                        <p class="card-text">「我觉得最好的交互，是在于，它先与我互动，然后我意识到我可以与它产生互动，进而去探索更多的方式，以求再为深入的体验。」</p>
+                        <p class="card-text text-right"><small class="text-muted">2019.12.2</small></p>
+                    </div>
+                </div>
+                <div class="card shadow-sm">
                     <img src="images/lightning/剪影.jpg" class="card-img-top" alt="剪影">
                     <div class="card-body">
                         <p class="card-text">误入创艺一楼的小黑屋。——「风吹草动」</p>
@@ -127,7 +133,8 @@
         <div class="container">
             <img src="images/icon-dark.png" alt="icon" width="30px">
             <small class="text-muted">&copy;2019 Xin-Scarecrow. All rights reserved.</small>
-            <p class="text-center text-white"><small>Designed by Yuxin_H. <span id="busuanzi_container_site_pv">哇！<span id="busuanzi_value_site_pv"></span>人找到我了。</span></small></p>
+            <p class="text-center text-white"><small>Designed by Yuxin_H. <span id="busuanzi_container_site_pv">哇！<span
+                            id="busuanzi_value_site_pv"></span>人找到我了。</span></small></p>
             <p class="text-right"><a href="#">Back to top</a></p>
         </div>
     </footer>
